# FP

./: Dockerfile  README.md
Lab1/Task14/: Lab1.opam  dune-project  hello.byte
Lab1/Task14/_build/: .db  .digest-db  _log  log
Lab1/Task14/_build/default/: Lab1.dune-package  Lab1.install  Lab1.opam  README.md
Lab1/Task14/_build/default/lib/: dune  lab1.cma  lab1.cmxa  lab1.cmxs  lab1.ml-gen  task_1.ml  task_3.ml
Lab1/Task14/_build/default/lib/.formatted/: task_1.ml  task_2.ml  task_4.ml  task_5.ml
Lab1/Task14/_build/default/lib/.lab1.objs/: lab1__Task_1.impl.d  lab1__Task_3.impl.d  lab1__Task_4.impl.d
Lab1/Task14/_build/default/lib/.lab1.objs/byte/: lab1.cmi  lab1__Task_1.cmi  lab1__Task_1.cmo  lab1__Task_1.cmt  lab1__Task_2.cmi  lab1__Task_2.cmo  lab1__Task_2.cmt  lab1__Task_3.cmi  lab1__Task_3.cmo  lab1__Task_3.cmt  lab1__Task_4.cmi  lab1__Task_4.cmo  lab1__Task_4.cmt  lab1__Task_5.cmi  lab1__Task_5.cmo  lab1__Task_5.cmt
Lab1/Task14/_build/default/lib/.lab1.objs/native/: lab1__Task_1.cmx  lab1__Task_2.cmx  lab1__Task_3.cmx  lab1__Task_4.cmx  lab1__Task_5.cmx
Lab1/Task14/_build/default/lib/.merlin-conf/: lib-lab1
Lab1/Task14/_build/default/test/: test_Lab1.ml
Lab1/Task14/_build/default/test/.formatted/: dune
Lab1/Task14/_build/default/test/.merlin-conf/: exe-test_Lab1
Lab1/Task14/_build/default/test/.test_Lab1.eobjs/byte/: dune__exe__Test_Lab1.cmti
Lab1/Task14/_build/default/test/.test_Lab1.eobjs/native/: dune__exe__Test_Lab1.cmx
Lab1/Task14/_build/install/default/lib/Lab1/: dune-package
Lab1/Task14/lib/: task_3.ml
Lab1/Task14/test/: dune
(+113 files in other folders)
